# tracerecorder_espidf_component

./: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  trcAssert.c  trcCounter.c  trcDependency.c  trcDiagnostics.c  trcEntryTable.c  trcError.c  trcEvent.c  trcEventBuffer.c  trcExtension.c  trcHardwarePort.c  trcHeap.c  trcISR.c  trcInternalEventBuffer.c  trcInterval.c  trcMultiCoreEventBuffer.c  trcObject.c  trcPrint.c  trcRunnable.c  trcStackMonitor.c  trcStateMachine.c  trcStaticBuffer.c  trcStreamingRecorder.c  trcString.c  trcTask.c  trcTaskMonitor.c  trcTimestamp.c
config/: trcConfig.h
extras/TraceRecorderInit/: TraceRecorderInit.cpp  readme.txt
extras/TraceRecorderInit/include/: TraceRecorderInit.h
include/: trcAssert.h  trcCounter.h  trcDefines.h  trcDependency.h  trcDiagnostics.h  trcEntryTable.h  trcError.h  trcEvent.h  trcEventBuffer.h  trcExtension.h  trcHardwarePort.h  trcHeap.h  trcISR.h  trcInternalEventBuffer.h  trcInterval.h  trcMultiCoreEventBuffer.h  trcObject.h  trcPrint.h  trcProcess.h  trcRecorder.h  trcRunnable.h  trcStackMonitor.h  trcStateMachine.h  trcStaticBuffer.h  trcString.h  trcTask.h  trcTaskMonitor.h  trcThread.h  trcTimestamp.h  trcTypes.h  trcUtility.h
kernelports/BareMetal/: CMakeLists.txt  trcKernelPort.c
kernelports/BareMetal/config/: trcKernelPortConfig.h
kernelports/BareMetal/include/: trcKernelPort.h
kernelports/ESP-IDF_FreeRTOS/: adapter_encoder_percepio.c  trcFreeRTOS.c  trcKernelPort.c
kernelports/ESP-IDF_FreeRTOS/config/: trcConfig.h  trcKernelPortConfig.h
kernelports/ESP-IDF_FreeRTOS/include/: esp_trace_freertos_impl.h  trcFreeRTOS.h  trcKernelPort.h
kernelports/ESP-IDF_FreeRTOS/streamports/ESP_IDF_APPTRACE/: trcStreamPort.c
kernelports/ESP-IDF_FreeRTOS/streamports/ESP_IDF_APPTRACE/include/: trcStreamPort.h
kernelports/ESP-IDF_FreeRTOS/streamports/File/config/: trcStreamPortConfig.h
kernelports/ESP-IDF_FreeRTOS/streamports/TCPIP/config/: trcStreamPortConfig.h
kernelports/ESP-IDF_FreeRTOS/streamports/UDP/config/: trcStreamPortConfig.h
kernelports/FreeRTOS/: trcKernelPort.c
kernelports/FreeRTOS/config/: trcKernelPortConfig.h
kernelports/FreeRTOS/include/: trcKernelPort.h
kernelports/Micrium/: trcKernelPort.c
kernelports/Micrium/config/: trcKernelPortConfig.h
kernelports/Micrium/include/: os_trace.h  os_trace_events.h  trcKernelPort.h
kernelports/SAFERTOS/: trcKernelPort.c
kernelports/SAFERTOS/config/: trcKernelPortConfig.h
kernelports/SAFERTOS/include/: trcKernelPort.h
kernelports/ThreadX/: trcCTI.c  trcKernelPort.c  trcKernelPortHooks.c
kernelports/ThreadX/config/: trcKernelPortConfig.h
kernelports/ThreadX/include/: trcCTI.h  trcKernelPort.h  trcKernelPortHooks.h
kernelports/Zephyr/: trcKernelPort.c
kernelports/Zephyr/config/: trcKernelPortConfig.h
kernelports/Zephyr/config/core/: trcConfig.h
kernelports/Zephyr/include/: tracing_tracerecorder.h  trcKernelPort.h
kernelports/Zephyr/scripts/: tz_parse_syscalls.py
kernelports/Zephyr/streamports/ARM_ITM/config/: trcStreamPortConfig.h
kernelports/Zephyr/streamports/Jlink_RTT/config/: trcStreamPortConfig.h
kernelports/Zephyr/streamports/RingBuffer/config/: trcStreamPortConfig.h
kernelports/Zephyr/streamports/Semihost/: trcStreamPort.c
kernelports/Zephyr/streamports/Semihost/config/: trcStreamPortConfig.h
kernelports/Zephyr/streamports/Semihost/include/: trcStreamPort.h
streamports/ARM_ITM/: Keil-uVision-Tracealyzer-ITM-Exporter.ini  trcStreamPort.c
streamports/ARM_ITM/config/: trcStreamPortConfig.h
streamports/ARM_ITM/include/: trcStreamPort.h
streamports/File/: trcStreamPort.c
streamports/File/config/: trcStreamPortConfig.h
streamports/File/include/: trcStreamPort.h
streamports/Jlink_RTT/: trcStreamPort.c
streamports/Jlink_RTT/config/: trcStreamPortConfig.h
streamports/Jlink_RTT/include/: trcStreamPort.h
streamports/RingBuffer/: trcStreamPort.c
streamports/RingBuffer/config/: trcStreamPortConfig.h
streamports/RingBuffer/include/: trcStreamPort.h
streamports/STM32_USB_CDC/: trcStreamPort.c
streamports/STM32_USB_CDC/config/: trcStreamPortConfig.h
streamports/STM32_USB_CDC/include/: trcStreamPort.h
streamports/TCPIP/: trcStreamPort.c
streamports/TCPIP/config/: trcStreamPortConfig.h
streamports/TCPIP/include/: trcStreamPort.h
streamports/TCPIP_Win32/: trcStreamPort.c
streamports/TCPIP_Win32/config/: trcStreamPortConfig.h
streamports/TCPIP_Win32/include/: trcStreamPort.h
streamports/UDP/: trcStreamPort.c
streamports/UDP/config/: trcStreamPortConfig.h
streamports/UDP/include/: trcStreamPort.h
streamports/XMOS_xScope/: trcStreamPort.c
streamports/XMOS_xScope/config/: trcStreamPortConfig.h
streamports/XMOS_xScope/include/: trcStreamPort.h
